# Bank-app

./: .env.example  README.md  main.py  pyproject.toml
data/: operations.xlsx
src/: decorators.py  external_api.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_reports.py  test_services.py  test_utils.py  test_views.py
tests/reports/: results.txt
